--- a/test.yml
+++ b/test.yml
@@ -1,6 +1,5 @@
 ---
 - hosts: all
+  become: true
   roles:
-    - role: '{{playbook_dir}}'
-      docker_registry_activate: False
-      docker_registry_pki_dir: '{{playbook_dir}}'
+    - role: '.'
